--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -1,11 +1,46 @@
-#root .beers{
+body{
     height: 100vh;
     width: 100vw;
-    display: flex;
-    flex-wrap: wrap;
+    font-family: 'Roboto', sans-serif;
+    background-color: #f7f3ec;
+    text-align: center;
+}
+
+#root h1, 
+#root h2{
+    padding: 20px;
+    
+    font-family: 'Rum Raisin', sans-serif;
+}
+
+#root{
+    width: 100vw;
+    height: 100%;
+}
+
+#root .beers{
+    width: max-content;
+    height: max-content;
+    
+    position: relative;
+    top: 20px;
+    /* left: 20px; */
+    left:50%;
+    transform: translateX(-50%);
+
+    display: grid;
+    grid-template-rows: 280px 280px;
+    grid-template-columns: 150px 150px 150px 150px 150px;
+    grid-gap: 30px;
+    grid-auto-flow: row;
+    
+    background-color: #f8da92;
+
+    padding: 30px;
 }
 
 #root .beers .beer{
-    width: 150px;
-    height: 280px;
+    /* width: 150px;
+    height: 280px; */
+    background-color: #f7f3ec;
 }
