--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -1,10 +1,21 @@
 body{
-    height: 100vh;
     width: 100vw;
+    height: 100%;
     font-family: 'Roboto', sans-serif;
     background-color: #f7f3ec;
     text-align: center;
     font-size: 14px;
+
+    color: #0f1f35;
+}
+
+#root{
+    width: 100%;
+    height: 100%
+}
+
+/* #root h1{
+    margin-top: 70px;
 }
 
 #root h1, 
@@ -13,11 +24,13 @@ body{
     
     font-family: 'Rum Raisin', sans-serif;
     font-size: 26px;
-}
+    z-index: 99;
+} */
 
 
 #root h3{
-    font-size: 20px;
+    font-size: 18px;
+    z-index: 99;
 }
 
 #root{
@@ -30,7 +43,7 @@ body{
     height: max-content;
     
     position: relative;
-    top: 20px;
+    top: 40px;
     /* left: 20px; */
     left:50%;
     transform: translateX(-50%);
@@ -44,6 +57,7 @@ body{
     background-color: #f8da92;
 
     padding: 30px;
+    border-radius: 10px;
 }
 
 #root .beers .beer{
@@ -52,16 +66,13 @@ body{
     background-color: #f7f3ec;
 
     padding: 8px;
+    border-radius: 5px;
+    box-shadow: 5px 3px 5px 3px rgb(236, 107, 102, 0.5) ;
 
     /* text-align: left; */
 }
 
 #root .beers .beer img{
-    /* position: absolute;
-    top: 8px;
-    left: 50%;
-    transform: translateX(-50%); */
-
     width: 100px;
     height: 70px;
     object-fit: cover;
@@ -70,6 +81,7 @@ body{
 
 #root .beers .beer h2{
     font-size: 22px;
+    color: #225456;
 }
 
 #root .beers .beer .sub{
@@ -79,3 +91,236 @@ body{
 #root .beers .beer .text{
 
 }
+
+/* Weights ball style */
+
+/* Both balls style */
+#root div.ball {
+    position: relative;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    background-color: #ec6b66;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+
+    height: 280px;
+    width: 280px;
+    border-radius: 180px;
+
+    line-height: 0;
+
+    font-size: 12px;
+    font-weight: 800;
+    /* color: #ec6b66; */
+    color: #f8da92;
+    /* opacity: 50%; */
+}
+
+#root div.ball h1, 
+#root div.ball h3 {
+    position: absolute;
+    /* top: 20px; */
+    left: 50%;
+    transform: translate(-50%);
+    width: fit-content;
+}
+
+#root div.ball h1{
+    top: 100px;
+    font-family: 'Rum Raisin', sans-serif;
+    font-size: 36px;
+}
+
+#root div.ball h3{
+    bottom: 140px;
+    font-size: 18px;
+}
+
+/* 8 ball style */
+
+  #root .ball .stripe{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #f7f3ec;
+  }
+  
+  #root .ball .stripe.nth1{
+    animation: 3s ease-in-out both infinite waveStripe1;
+    
+    /* display: none; */
+  }
+  
+  #root .ball .wideStripe{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #f7f3ec;
+    /* animation: 3s ease-in-out both 0.6s infinite waveStripe1; */
+  }
+  
+  #root .ball .wideStripe.nth1{
+    animation: 3s ease-in-out both 0.3s infinite waveStripe1;
+  }
+  #root .ball .wideStripe.nth2{
+    animation: 3s ease-in-out both 0.6s infinite waveStripe1;
+  }
+  #root .ball .wideStripe.nth3{
+    animation: 3s ease-in-out both 0.9s infinite waveStripe1;
+  }
+  #root .ball .wideStripe.nth4{
+    animation: 3s ease-in-out both 1.2s infinite waveStripe1;
+  }
+  #root .ball .wideStripe.nth5{
+    animation: 3s ease-in-out both 1.5s infinite waveStripe1;
+  }
+  #root .ball .wideStripe.nth6{
+    animation: 3s ease-in-out both 1.8s infinite waveStripe1;
+  }
+  #root .ball .wideStripe.nth7{
+    animation: 3s ease-in-out both 2.1s infinite waveStripe1;
+  }
+  #root .ball .wideStripe.nth8{
+    animation: 3s ease-in-out both 2.4s infinite waveStripe1;
+  }
+  #root .ball .wideStripe.nth9{
+    animation: 3s ease-in-out both 2.7s infinite waveStripe1;
+  }
+  #root .ball .wideStripe.nth10{
+    animation: 3s ease-in-out both 3s infinite waveStripe1;
+  }
+  
+  @keyframes waveStripe1 {
+    0%{
+      height: 10px;
+      bottom: 0;
+      opacity: 1;
+      /* margin-top: 0; */
+    }
+    100%{
+      height: 0;
+      bottom: 40%;
+      opacity: 0;
+      /* margin-top: 10px; */
+    }
+  }
+  
+  #root .ball .stripe.nth2{
+    animation: 2.88s ease-in-out both waveStripe2;
+  }
+  
+  @keyframes waveStripe2 {
+    0%{
+      height: 10px;
+      bottom: 10px;
+      /* opacity: 1; */
+      /* margin-top: 0; */
+    }
+    100%{
+      height: 0;
+      bottom: 40%;
+      opacity: 0;
+      /* margin-top: 10px; */
+    }
+  }
+  
+  #root .ball .stripe.nth3{
+    animation: 2.76s ease-in-out both waveStripe3;
+  }
+  
+  @keyframes waveStripe3 {
+    0%{
+      height: 8px;
+      bottom: 20px;
+      /* opacity: 1; */
+      /* margin-top: 0; */
+    }
+    100%{
+      height: 0;
+      bottom: 40%;
+      opacity: 0;
+      /* margin-top: 10px; */
+    }
+  }
+  
+  #root .ball .stripe.nth4{
+    animation: 2.64s ease-in-out both waveStripe4;
+  }
+  
+  @keyframes waveStripe4 {
+    0%{
+      height: 6px;
+      bottom: 30px;
+      /* opacity: 1; */
+      /* margin-top: 0; */
+    }
+    100%{
+      height: 0;
+      bottom: 40%;
+      opacity: 0;
+      /* margin-top: 10px; */
+    }
+  }
+  
+  #root .ball .stripe.nth5{
+    animation: 2.52s ease-in-out both waveStripe5;
+  }
+  
+  @keyframes waveStripe5 {
+    0%{
+      height: 4px;
+      bottom: 40px;
+      /* opacity: 1; */
+      /* margin-top: 0; */
+    }
+    100%{
+      height: 0;
+      bottom: 40%;
+      opacity: 0;
+      /* margin-top: 10px; */
+    }
+  }
+  
+  #root .ball .stripe.nth6{
+    animation: 2.40s ease-in-out both waveStripe6;
+  }
+  
+  @keyframes waveStripe6 {
+    0%{
+      height: 2px;
+      bottom: 50px;
+      /* opacity: 1; */
+      /* margin-top: 0; */
+    }
+    100%{
+      height: 0;
+      bottom: 40%;
+      opacity: 0;
+      /* margin-top: 10px; */
+    }
+  }
+  
+  #root .ball .stripe.nth7{
+    animation: 2.28s ease-in-out both waveStripe7;
+  }
+  
+  @keyframes waveStripe7 {
+    0%{
+      height: 1px;
+      bottom: 70px;
+      opacity: 1;
+      /* margin-top: 0; */
+    }
+    100%{
+      height: 0;
+      bottom: 40%;
+      opacity: 0;
+      /* margin-top: 10px; */
+    }
+  }
