--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -7,6 +7,11 @@ body{
     font-size: 14px;
 
     color: #0f1f35;
+    font-weight: 500;
+}
+
+h1, h2, h3, h4{
+    font-family: 'Rum Raisin', sans-serif;
 }
 
 #root{
@@ -53,6 +58,7 @@ body{
     grid-template-columns: 150px 150px 150px 150px 150px;
     grid-gap: 30px;
     grid-auto-flow: row;
+    text-align: left;
     
     background-color: #f8da92;
 
@@ -65,7 +71,7 @@ body{
     height: 280px; */
     background-color: #f7f3ec;
 
-    padding: 8px;
+    padding: 12px;
     border-radius: 5px;
     box-shadow: 5px 3px 5px 3px rgb(236, 107, 102, 0.5) ;
 
@@ -73,23 +79,29 @@ body{
 }
 
 #root .beers .beer img{
-    width: 100px;
-    height: 70px;
+    position: relative;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
     object-fit: cover;
-    align-content: center;
 }
 
 #root .beers .beer h2{
     font-size: 22px;
     color: #225456;
+    
 }
 
 #root .beers .beer .sub{
     font-size: 14px;
+    color: #ec6b66;
 }
 
 #root .beers .beer .text{
-
+    color: #0f1f35;
 }
 
 /* Weights ball style */
@@ -121,12 +133,14 @@ body{
 }
 
 #root div.ball h1, 
-#root div.ball h3 {
+#root div.ball h3,
+#root div.ball h4 {
     position: absolute;
     /* top: 20px; */
     left: 50%;
     transform: translate(-50%);
     width: fit-content;
+    text-shadow: 1px 1px #0f1f35;
 }
 
 #root div.ball h1{
@@ -136,8 +150,13 @@ body{
 }
 
 #root div.ball h3{
-    bottom: 140px;
-    font-size: 18px;
+    bottom: 145px;
+    font-size: 22px;
+}
+
+#root div.ball h4{
+    bottom: 120px;
+    font-size: 16px;
 }
 
 /* 8 ball style */
