--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -2,12 +2,18 @@ body{
     width: 100vw;
     height: 100%;
     font-family: 'Roboto', sans-serif;
-    background-color: #f7f3ec;
+    background-color: #225456 ;
     text-align: center;
     font-size: 14px;
 
     color: #0f1f35;
     font-weight: 500;
+
+    --circle-radius: calc(100vh - 40px);
+    --circle-background : #f8da92;
+    /* background-color: #f8da92; */
+    --degree: 30deg;
+    
 }
 
 h1, h2, h3, h4{
@@ -44,39 +50,94 @@ h1, h2, h3, h4{
 }
 
 #root .beers{
-    width: max-content;
-    height: max-content;
+    width: var(--circle-radius);
+    height: var(--circle-radius);
     
-    position: relative;
-    top: 40px;
-    /* left: 20px; */
-    left:50%;
-    transform: translateX(-50%);
-
-    display: grid;
-    grid-template-rows: 260px 260px;
-    grid-template-columns: 180px 180px 180px 180px 180px;
-    grid-gap: 30px;
-    grid-auto-flow: row;
-    text-align: left;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     
-    background-color: #f8da92;
-
-    padding: 30px;
-    border-radius: 10px;
+    background-color: var(--circle-background);
+    
+    border-radius: calc(100vh - 40px);
 }
 
 #root .beers .beer{
-    /* width: 150px;
-    height: 280px; */
+    position: absolute;
+    top: -15px;
+    right: calc(50% - 75px);
+
+    width: 150px;
+    height: 250px;
     background-color: #f7f3ec;
 
     padding: 12px;
     border-radius: 5px;
     box-shadow: 5px 3px 5px 3px rgb(236, 107, 102, 0.5) ;
 
-    /* text-align: left; */
+    transform-origin: 75px 465px;
 }
+
+#root .beers .beer:nth-child(1){
+    transform: rotate(30deg);
+}
+
+
+#root .beers .beer:nth-child(2){
+    transform: rotate(60deg);
+}
+
+#root .beers .beer:nth-child(3){
+    transform: rotate(90deg);
+}
+
+#root .beers .beer:nth-child(4){
+    transform: rotate(120deg);
+}
+
+#root .beers .beer:nth-child(5){
+    transform: rotate(150deg);
+}
+
+#root .beers .beer:nth-child(6){
+    transform: rotate(180deg);
+}
+
+#root .beers .beer:nth-child(7){
+    transform: rotate(210deg);
+}
+
+#root .beers .beer:nth-child(8){
+    transform: rotate(240deg);
+}
+
+#root .beers .beer:nth-child(9){
+    transform: rotate(270deg);
+}
+
+#root .beers .beer:nth-child(10){
+    transform: rotate(300deg);
+}
+
+#root .beers .beer:nth-child(11){
+    transform: rotate(330deg);
+}
+
+#root .beers .beer:nth-child(12){
+    transform: rotate(0deg);
+}
+
+
+
+/* $n: 10;
+
+@for $i from 1 through $n {
+  .beer:nth-child(#{$i}) {
+    transform: rotate(calc(36deg * $ideg));
+    transform-origin: 50% 50%;
+  }
+} */
 
 #root .beers .beer img{
     position: relative;
@@ -108,10 +169,11 @@ h1, h2, h3, h4{
 
 /* Both balls style */
 #root div.ball {
-    position: relative;
-    top: 20px;
+    position: absolute;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
+
 
     background-color: #ec6b66;
     display: flex;
@@ -166,7 +228,7 @@ h1, h2, h3, h4{
     left: 0;
     width: 100%;
     height: 0;
-    background-color: #f7f3ec;
+    background-color: var(--circle-background);
   }
   
   #root .ball .stripe.nth1{
@@ -180,7 +242,7 @@ h1, h2, h3, h4{
     left: 0;
     width: 100%;
     height: 0;
-    background-color: #f7f3ec;
+    background-color: var(--circle-background);
     /* animation: 3s ease-in-out both 0.6s infinite waveStripe1; */
   }
   
